--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-*/node_modules
+*/node_modules/
 */DS_Store
 */dist
 *.local
